# hub-ktxw

./: .gitignore  Cargo.toml  PROJECT_EXECUTION.md  README - 副本.md  README.md  WIRELESS_CONFIGURATION_HARDWARE_CHECKLIST.md  WIRELESS_CONFIGURATION_UPDATE_RECORD_2026-04-30.md  build.rs  dev-mcs-reboot-check.json  dev-mcs-reboot-stability.json  pair-regression-result.json  reboot-pair-resume-result.json  reboot-stress-result.json  rf-settings-stress-result-20260521.json  rf-settings-stress-result-latest.json  rf-settings-stress-result.json  upgrade-test-result.json
.cargo/: config.toml
.github/workflows/: sdk-guard.yml
docs/: ffi-maintenance.md  sdk-version-manifest.md
pc-test-package/: README.md
scripts/: check-ffi-bindings-sync.ps1  package-a7.py  package-pc-test.ps1  reboot_pair_resume_check.py  reboot_stress_test.py  regenerate-ffi-bindings.ps1  rf_settings_stress_test.py  sdk-upgrade-pipeline.ps1  wireless_pair_regression.py  wireless_ui_stress_test.py
src/: bb_api.rs  ffi.rs  ffi_adapter_types.rs  main.rs  serial_port.rs
static/: index.html  styles.css
肖剑/: week03
肖剑/Week01/: model_1.py  model_2.py
肖剑/Week02/: homework_01.py  homework_02_优化1.py
肖剑/Week03/: homework_01_GRU_replace_LSTM.py
肖剑/Week04/: ab_test_log.md
肖剑/Week04/01-intent-classify/: config.py  main.py
肖剑/Week05/: 01_Deepseek_OpenAI_API.py  02_ollama_api_chat_test.py  02_ollama_api_test.py  02_ollama_部署.md  03_RAG实现流程介绍.md
肖剑/Week08/task01/: autodl_ID.txt
肖剑/Week09/: 01_workflow_chatflow.md  02_AI智能穿搭.yml  03_AI驾考无忧_改进版.yml
肖剑/Week10/: homework_01_优化.py  homework_02.py
(+11 files in other folders)
